# application/common/validate/Common.php
@@ -1,0 +1,13 @@
+<?php
+namespace app\common\validate;
+
+use think\Validate;
+
+class Common extends Validate
+{
+
+    protected $pageRule = [
+        'page'      => 'number|egt:1',
+        'pageSize'  => 'number',
+    ];
+}
