# public/dist/swagger.json
@@ -104,6 +104,291 @@
                 }
             }
         },
+        "/admin/admin/modifySystemInfo": {
+            "post": {
+                "tags": [
+                    "System"
+                ],
+                "summary": "\u4fee\u6539\u5fae\u4fe1\u7cfb\u7edf\u5fc5\u8981\u4fe1\u606f",
+                "description": "\u4fee\u6539\u5fae\u4fe1\u7cfb\u7edf\u5fc5\u8981\u4fe1\u606f\uff0c\u5982appid\u7b49",
+                "operationId": "modifySystemInfo",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "multipart/form-data"
+                ],
+                "parameters": [
+                    {
+                        "name": "SESSION_ID",
+                        "in": "formData",
+                        "description": "\u4ee4\u724c\u53f7",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "id",
+                        "in": "formData",
+                        "description": "\u8bb0\u5f55id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "appid",
+                        "in": "formData",
+                        "description": "\u5fae\u4fe1appid",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "appsecret",
+                        "in": "formData",
+                        "description": "\u5fae\u4fe1 appsecret",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "token",
+                        "in": "formData",
+                        "description": "\u5fae\u4fe1token",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "aesKey",
+                        "in": "formData",
+                        "description": "\u5bc6\u94a5",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
+        "/admin/admin/getSystemInfo": {
+            "post": {
+                "tags": [
+                    "System"
+                ],
+                "summary": "\u83b7\u5f97\u5fae\u4fe1\u7cfb\u7edf\u5fc5\u8981\u4fe1\u606f",
+                "description": "\u83b7\u5f97\u5fae\u4fe1\u7cfb\u7edf\u5fc5\u8981\u4fe1\u606f\uff0c\u5982appid\u7b49",
+                "operationId": "getSystemInfo",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "multipart/form-data"
+                ],
+                "parameters": [
+                    {
+                        "name": "SESSION_ID",
+                        "in": "formData",
+                        "description": "\u4ee4\u724c\u53f7",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
+        "/admin/admin/getUserInfo": {
+            "post": {
+                "tags": [
+                    "System"
+                ],
+                "summary": "\u83b7\u5f97\u7528\u6237\u4fe1\u606f",
+                "description": "\u83b7\u5f97\u7528\u6237\u4fe1\u606f\uff0c\u5982adminName\u7b49",
+                "operationId": "getUserInfo",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "multipart/form-data"
+                ],
+                "parameters": [
+                    {
+                        "name": "SESSION_ID",
+                        "in": "formData",
+                        "description": "\u4ee4\u724c\u53f7",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "userId",
+                        "in": "formData",
+                        "description": "\u7528\u6237Id",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
+        "/admin/admin/modifyUserInfo": {
+            "post": {
+                "tags": [
+                    "System"
+                ],
+                "summary": "\u4fee\u6539\u7528\u6237\u4fe1\u606f",
+                "description": "\u4fee\u6539\u7528\u6237\u4fe1\u606f\uff0c\u5982adminName\u7b49",
+                "operationId": "modifyUserInfo",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "multipart/form-data"
+                ],
+                "parameters": [
+                    {
+                        "name": "SESSION_ID",
+                        "in": "formData",
+                        "description": "\u4ee4\u724c\u53f7",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "userId",
+                        "in": "formData",
+                        "description": "\u7528\u6237Id",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "adminName",
+                        "in": "formData",
+                        "description": "\u7528\u6237\u540d",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "password",
+                        "in": "formData",
+                        "description": "\u7528\u6237\u5bc6\u7801",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "status",
+                        "in": "formData",
+                        "description": "\u7528\u6237\u72b6\u6001",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
+        "/admin/admin/addAdminUser": {
+            "post": {
+                "tags": [
+                    "System"
+                ],
+                "summary": "\u589e\u52a0\u7ba1\u7406\u5458",
+                "description": "\u589e\u52a0\u4e00\u4e2a\u666e\u901a\u7ba1\u7406\u5458",
+                "operationId": "addAdminUser",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "multipart/form-data"
+                ],
+                "parameters": [
+                    {
+                        "name": "SESSION_ID",
+                        "in": "formData",
+                        "description": "\u4ee4\u724c\u53f7",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "userId",
+                        "in": "formData",
+                        "description": "\u7528\u6237Id",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "adminName",
+                        "in": "formData",
+                        "description": "\u7528\u6237\u540d",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "password",
+                        "in": "formData",
+                        "description": "\u7528\u6237\u5bc6\u7801",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
+        "/admin/admin/getAdminList": {
+            "post": {
+                "tags": [
+                    "System"
+                ],
+                "summary": "\u83b7\u5f97\u7ba1\u7406\u5458\u5217\u8868",
+                "description": "\u83b7\u5f97\u7ba1\u7406\u5458\u5217\u8868",
+                "operationId": "getAdminList",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "multipart/form-data"
+                ],
+                "parameters": [
+                    {
+                        "name": "SESSION_ID",
+                        "in": "formData",
+                        "description": "\u4ee4\u724c\u53f7",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "page",
+                        "in": "formData",
+                        "description": "\u5f53\u524d\u9875",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "pageSize",
+                        "in": "formData",
+                        "description": "\u9875\u5bb9\u91cf",
+                        "required": false,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
         "/admin/index/systemLogin": {
             "post": {
                 "tags": [
@@ -117,43 +402,6 @@
                 ],
                 "produces": [
                     "multipart/form-data"
-                ],
-                "parameters": [
-                    {
-                        "name": "userId",
-                        "in": "formData",
-                        "description": "\u7ba1\u7406\u5458\u5185\u90e8\u552f\u4e00\u6807\u8bc6\u7b26",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "password",
-                        "in": "formData",
-                        "description": "\u767b\u5f55\u5bc6\u7801",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                }
-            }
-        },
-        "/system/index/systemLogin": {
-            "post": {
-                "tags": [
-                    "System"
-                ],
-                "summary": "\u7ba1\u7406\u5458\u767b\u9646\u63a5\u53e3\uff08\u7528\u6237id+\u5bc6\u7801\uff09",
-                "description": "\u666e\u901a\u7ba1\u7406\u5458\u53ca\u8d85\u7ba1\u767b\u9646\u8be5\u7cfb\u7edf\uff0c\u8fdb\u884c\u76f8\u5173\u64cd\u4f5c",
-                "operationId": "systemLogin",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
                 ],
                 "parameters": [
                     {
